app/static/css/base.css
/*
	Color scheme: http://www.colorcombos.com/color-schemes/423/ColorCombo423.html;
	153450 - darkest blue
	294052 - dark blue
	447294 - blue
	8FBCDB - light blue
	F4D6BC - linen
	F8E4CC - light linen
*/

@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');

* {
	box-sizing: border-box;

	font-family: 'Open Sans', sans-serif;
	font-weight: 300;
	font-size: 1em;

	color: #294052;
}

h1 {
	font-size: 2em;
}
h2 {
	font-size: 1.5em;
}
h3 {
	font-size: 1em;
	font-weight: bold;
}

html, body {
	background-color: #294052;

	margin: 0;

	height: 100%;
}

nav ul {
	padding: 0;
	margin : 0;
	list-style-type: none;

	display: flex;
	flex-direction: row;

	align-items: stretch;

	height: 5em;
}

nav a, nav a:visited{
	display: flex;
	align-items: center;
	justify-content: center;

	text-decoration: none;
	color: inherit;
}

nav #logo {
	width: 10em;

	display: flex;
	justify-content: center;

	flex-direction: row;

	background: #8FBCDB;
}

nav .nav-button {
	display: flex;
	align-items: stretch;
	justify-content: center;

	flex-direction: row;

	width: 7em;
	background: #8FBCDB;
	-webkit-transition: background-color 0.5s;

	flex-shrink: 0;
}

nav .nav-button> a {
	width: 100%;
}

nav .nav-button:hover {
	background: #F8E4CC;
}

nav .nav-button:hover > a {
	color: #447294;
}

nav .nav-sub-button {
	display: flex;
	justify-content: center;

	flex-direction: row;

	width: 7em;

	flex-shrink: 0;
}

nav .nav-sub-button:hover > a {
	color: #447294;
}

nav .nav-menu {
	background: #8FBCDB;

	width: 7em;

	display: flex;
	flex-direction: row;
	align-items: stretch;
	justify-content: left;

	-webkit-transition: width 0.5s, background-color 0.5s;
}

nav .nav-menu:hover {
	background: #F8E4CC;
	width: 14em;
}

nav .nav-menu ul {
	/*background: #F8E4CC;*/

	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: center;
}

nav .nav-menu ul a {
	visibility: hidden;
}

nav .nav-menu:hover ul a {
	visibility: visible;
}

nav .nav-menu a:hover {
	color: #447294;
}

nav .nav-filler {
	background: #8FBCDB;
	flex-grow: 1;
}

#main {
	background: #F4D6BC;
	
	min-height: calc(100% - 10em);
}

footer {
	display: flex;
	flex-direction: row;

	background: #294052;

	height: 5em;
}

/* Utilities */

.center-content {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.whole   { width: 100%  ; }
.half    { width: 50%   ; }
.quarter { width: 25%   ; }
.eigth   { width: 12.5% ; }

.width-xs { width: 120px;}
.width-sm { width: 200px;}
.width-md { width: 400px;}
.width-lg { width: 600px;}
.width-xl { width: 800px;}

.top-padding-xs { padding-top: 1em; }
.top-padding-sm { padding-top: 2em; }
.top-padding-md { padding-top: 3em; }
.top-padding-lg { padding-top: 4em; }
.top-padding-xl { padding-top: 5em; }

.top-margin-xs { margin-top: 1em; }
.top-margin-sm { margin-top: 2em; }
.top-margin-md { margin-top: 3em; }
.top-margin-lg { margin-top: 4em; }
.top-margin-xl { margin-top: 5em; }

.btn {
	/*background: -webkit-linear-gradient(left,  #F4D6BC 0%, #F8E4CC 100%);*/
	/*background: -webkit-linear-gradient(right,  #447294 0%, #447294 120%);*/
	background-color: #8FBCDB;
	border: none;
	padding: 15px 32px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	font-size: 1em;

	border-style: solid;
	border-width: 0px;
	border-radius: 1em;

	transition: box-shadow 0.5s;
}

.btn:hover {
	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

.error {
	background: red;
}

/* === FORM === */
.form-box {
	/*width: 600px;*/
	background-color: #F8E4CC;

	padding-left : 5em;
	padding-right: 5em;

	margin-top: 3em;
	padding-bottom: 1em;
	margin-bottom: 3em;
}

.form > input, .form > textarea {
	font-size: 1em;

	margin-bottom: 1em;

	border-style: solid;
	border-width: 0px;
	border-radius: 0.3em;
}

.wide-form-area {
	width: 20em;
	height: 5em;
}

.wide-form-field {
	width: 20em;
	height: 2em;
}

.rounded {
	border-style: solid;
	border-width: 0px;
	border-radius: 1em;
}
/* === END FORM === */

